# compmath

./: .gitignore  Cargo.toml  README.md  input.json
docs/lab1/: input1  input2  input3  input4  questions.md
docs/lab1/tex/: lab1.tex
docs/lab2/: questions.md
docs/lab2/tex/: lab2.tex  НУиСНУ.drawio
docs/lab3/: input  questions.md
docs/lab3/tex/: lab3.tex
docs/lab4/: input  questions.md
docs/lab4/tex/: lab4.tex
docs/lab5/: input  input2  questions.md
docs/lab5/tex/: lab5.tex
docs/lab6/: questions.md
docs/lab6/tex/: lab6.tex
src/: main.rs
src/compute/: core.rs  lab_five.rs  lab_four.rs  lab_one.rs  lab_six.rs  lab_three.rs  lab_two.rs  mod.rs
src/frontend/: .eslintrc.json  404.html  index.html  package.json  tailwind.config.ts  tsconfig.json
src/frontend/app/: layout.tsx  page.tsx  providers.tsx
src/frontend/app/lab1/: page.tsx
src/frontend/app/lab2/: page.tsx
src/frontend/app/lab3/: page.tsx
src/frontend/app/lab4/: page.tsx
src/frontend/app/lab5/: page.tsx
src/frontend/app/lab6/: page.tsx
src/frontend/components/: ApproximationChart.tsx  CalculatorComponent.tsx  CustomChart.tsx  CustomDifferentialChart.tsx  CustomInterpolationChart.tsx  CustomSingleChart.tsx  CustomSystemChart.tsx  Table.tsx  header.tsx
src/frontend/spa/: bun.lockb  package.json
src/frontend/spa/app/: layout.tsx  page.tsx
src/frontend/src-tauri/: tauri.conf.json
src/routes/: about.rs  approximation.rs  differentials.rs  integration.rs  interpolation.rs  linear_equation.rs  mod.rs  nonlinear_equation.rs  nonlinear_equations.rs
(+3 files in other folders)
